--- a/.gitignore
+++ b/.gitignore
@@ -30,8 +30,9 @@ yarn-debug.log*
 yarn-error.log*
 
 # env files (can opt-in for committing if needed)
-.env*
-
+.env
+#fake data json file 
+.fake_blog_data.json
 # vercel
 .vercel
 
